# Projekt

./: BadInput.cpp  BadInput.h  CMakeLists.txt  Card.cpp  Card.h  Croupier.cpp  Croupier.h  Ending.cpp  Ending.h  EndingSplit.cpp  EndingSplit.h  Game.cpp  Game.h  Mainwindow.cpp  Mainwindow.h  MyException.h  Participant.h  Player.cpp  Player.h  background.qrc  badinput.ui  cards.qrc  ending.ui  endingsplit.ui  game.ui  main.cpp  mainwindow.ui
build-ProjektJIPP-Qt_6_6_1_for_macOS-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-ProjektJIPP-Qt_6_6_1_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-6d6695e497bbeee97345.json  cmakeFiles-v1-7b27162caed7115527c2.json  codemodel-v2-faa0f3ab4e95a5ee982d.json  directory-.-Debug-d6c3e22fb69339f27c0c.json  index-2024-02-22T01-10-47-0395.json  target-ProjektJIPP-Debug-2f8066c4e4a037503282.json  target-ProjektJIPP_autogen-Debug-4d4448893e59557b63e7.json  target-ProjektJIPP_autogen_timestamp_deps-Debug-4bf3a3b8484b31ce99e0.json
build-ProjektJIPP-Qt_6_6_1_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-ProjektJIPP-Qt_6_6_1_for_macOS-Debug/ProjektJIPP.app/Contents/: Info.plist
